@@ -255,6 +255,9 @@ Release 2.6.0 - UNRELEASED
 
     HDFS-7158. Reduce the memory usage of WebImageViewer. (wheat9)
 
+    HDFS-7153. Add storagePolicy to NN edit log during file creation.
+    (Arpit Agarwal)
+
   OPTIMIZATIONS
 
     HDFS-6690. Deduplicate xattr names in memory. (wang)
